--- a/compose.yaml
+++ b/compose.yaml
@@ -1,1 +1,40 @@
-services: {}
+services:
+  postgres:
+    image: postgres:15-alpine
+    container_name: realvista-postgres
+    environment:
+      POSTGRES_DB: realvista_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - realvista-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    container_name: realvista-pgadmin
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@realvista.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    networks:
+      - realvista-network
+    depends_on:
+      - postgres
+
+volumes:
+  postgres_data:
+    driver: local
+
+networks:
+  realvista-network:
+    driver: bridge
