--- a/pom.xml
+++ b/pom.xml
@@ -193,19 +193,55 @@
 				</configuration>
 			</plugin>
 
-			<!-- Spring Boot Maven Plugin -->
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
+		<!-- Spring Boot Maven Plugin -->
+		<plugin>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-maven-plugin</artifactId>
+			<configuration>
+				<excludes>
+					<exclude>
+						<groupId>org.projectlombok</groupId>
+						<artifactId>lombok</artifactId>
+					</exclude>
+				</excludes>
+			</configuration>
+			<executions>
+				<execution>
+					<goals>
+						<goal>build-info</goal>
+					</goals>
+				</execution>
+			</executions>
+		</plugin>
+
+		<!-- Git Commit ID Plugin for Git information in Actuator -->
+		<plugin>
+			<groupId>io.github.git-commit-id</groupId>
+			<artifactId>git-commit-id-maven-plugin</artifactId>
+			<version>9.0.1</version>
+			<executions>
+				<execution>
+					<id>get-the-git-infos</id>
+					<goals>
+						<goal>revision</goal>
+					</goals>
+					<phase>initialize</phase>
+				</execution>
+			</executions>
+			<configuration>
+				<generateGitPropertiesFile>true</generateGitPropertiesFile>
+				<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
+				<includeOnlyProperties>
+					<includeOnlyProperty>^git.build.*$</includeOnlyProperty>
+					<includeOnlyProperty>^git.commit.id.abbrev$</includeOnlyProperty>
+					<includeOnlyProperty>^git.commit.id.full$</includeOnlyProperty>
+					<includeOnlyProperty>^git.commit.message.short$</includeOnlyProperty>
+					<includeOnlyProperty>^git.commit.time$</includeOnlyProperty>
+					<includeOnlyProperty>^git.branch$</includeOnlyProperty>
+				</includeOnlyProperties>
+				<commitIdGenerationMode>full</commitIdGenerationMode>
+			</configuration>
+		</plugin>
 
 			<!-- Flyway Plugin -->
 			<plugin>
