--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ services:
     image: postgres:15-alpine
     container_name: realvista-postgres
     environment:
-      POSTGRES_DB: realvista_db
+      POSTGRES_DB: realvista_test
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
     ports:
