--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
+			<version>3.18.0</version> <!-- CVE-2025-48924 fix: upgraded from managed version -->
 		</dependency>
 
 		<!-- Docker Compose Support -->
