--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,21 +159,6 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
 
-    services:
-      postgres:
-        image: postgres:15-alpine
-        env:
-          POSTGRES_DB: realvista_test
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -213,12 +198,7 @@ jobs:
 
       - name: Run Unit Tests
         env:
-          SPRING_PROFILES_ACTIVE: dev
-          DB_HOST: localhost
-          DB_PORT: 5432
-          DB_NAME: realvista_test
-          DB_USERNAME: postgres
-          DB_PASSWORD: postgres
+          SPRING_PROFILES_ACTIVE: test
         run: mvn test
 
       - name: Upload test results
@@ -248,21 +228,6 @@ jobs:
     name: Code Coverage
     runs-on: ubuntu-latest
     needs: unit-tests
-
-    services:
-      postgres:
-        image: postgres:15-alpine
-        env:
-          POSTGRES_DB: realvista_test
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
 
     steps:
       - name: Checkout code
@@ -303,12 +268,7 @@ jobs:
 
       - name: Run tests with coverage
         env:
-          SPRING_PROFILES_ACTIVE: dev
-          DB_HOST: localhost
-          DB_PORT: 5432
-          DB_NAME: realvista_test
-          DB_USERNAME: postgres
-          DB_PASSWORD: postgres
+          SPRING_PROFILES_ACTIVE: test
         run: mvn clean test jacoco:report
 
       - name: Check coverage threshold
