--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
-		<mapstruct.version>1.6.3</mapstruct.version>
+		<mapstruct.version>1.5.5.Final</mapstruct.version>
 		<springdoc.version>2.8.15</springdoc.version>
 		<flyway.version>9.22.3</flyway.version>
 		<spotbugs.version>4.8.2.0</spotbugs.version>
