--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -73,7 +73,10 @@ spring:
             issuer-uri: https://accounts.google.com
       mobile:
         google:
-          client-id: ${GOOGLE_MOBILE_CLIENT_ID:your_google_mobile_client_id}
+          android:
+            client-id: ${GOOGLE_ANDROID_CLIENT_ID:your_google_android_client_id}
+          ios:
+            client-id: ${GOOGLE_IOS_CLIENT_ID:your_google_ios_client_id}
 
 # Actuator Configuration
 management:
