--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -54,7 +54,10 @@ spring:
             issuer-uri: https://accounts.google.com
       mobile:
         google:
-          client-id: test-google-mobile-client-id
+          android:
+            client-id: test-google-android-client-id
+          ios:
+            client-id: test-google-ios-client-id
 
   # Disable Docker Compose for tests
   docker:
