--- a/pom.xml
+++ b/pom.xml
@@ -260,6 +260,14 @@
 				<groupId>org.flywaydb</groupId>
 				<artifactId>flyway-maven-plugin</artifactId>
 				<version>${flyway.version}</version>
+				<configuration>
+					<url>jdbc:postgresql://localhost:5432/realvista_test</url>
+					<user>postgres</user>
+					<password>postgres</password>
+					<locations>
+						<location>filesystem:src/main/resources/db/migration</location>
+					</locations>
+				</configuration>
 			</plugin>
 
 			<!-- Checkstyle Plugin -->
