--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,19 @@ spring:
     frontend:
       url: http://localhost:3000
 
+  # Mail Configuration
+  mail:
+    host: ${MAIL_HOST:smtp.gmail.com}
+    port: ${MAIL_PORT:587}
+    username: ${MAIL_USERNAME:huynbqse181742@fpt.edu.vn}
+    password: ${MAIL_PASSWORD:fqzh exkc honw vlin}
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
   profiles:
     active: ${SPRING_PROFILES_ACTIVE:dev}
 
