feat: Update cache configuration to include listings in cache-names

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -59,7 +59,9 @@ spring:
   # Cache Configuration
   cache:
     type: simple
-    cache-names: users
+    cache-names: 
+      - users
+      - listings
 
   # Server Configuration
   server:
