--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,6 +51,7 @@ spring:
 
   # Jackson Configuration
   jackson:
+    property-naming-strategy: SNAKE_CASE
     serialization:
       write-dates-as-timestamps: false
     time-zone: UTC
@@ -79,7 +80,7 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID:your_google_client_id}
             client-secret: ${GOOGLE_CLIENT_SECRET:your_google_client_secret}
-            redirect-uri: "{baseUrl}/login/oauth2/code/google"
+            redirect-uri: '{baseUrl}/login/oauth2/code/google'
             scope: profile,email
         provider:
           google:
@@ -119,8 +120,8 @@ logging:
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
   pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss} - %X{traceId} - %5p [%t] %c{1}:%L - %m%n"
-    file: "%d{yyyy-MM-dd HH:mm:ss} - %X{traceId} - %5p [%t] %c{1}:%L - %m%n"
+    console: '%d{yyyy-MM-dd HH:mm:ss} - %X{traceId} - %5p [%t] %c{1}:%L - %m%n'
+    file: '%d{yyyy-MM-dd HH:mm:ss} - %X{traceId} - %5p [%t] %c{1}:%L - %m%n'
   file:
     name: logs/application.log
   logback:
