refactor(listing): ref logic

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -22,7 +22,7 @@ spring:
     show-sql: false
     properties:
       hibernate:
-        format_sql: false
+        format_sql: true
 
   # Flyway Configuration
   flyway:
